<?xml version="1.0" encoding="utf-8"?>
<!-- 拨号界面 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <!--键盘布局-->
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/colorDivider">

        <TableRow>
            <TextView
                android:id="@+id/keypad_1"
                style="@style/DialNumberTextView"
                android:onClick="onClickKeypad"
                android:text="@string/keypad_1"/>
            <TextView
                android:id="@+id/keypad_2"
                style="@style/DialNumberTextView"
                android:onClick="onClickKeypad"
                android:text="@string/keypad_2"/>
            <TextView
                android:id="@+id/keypad_3"
                style="@style/DialNumberTextView"
                android:onClick="onClickKeypad"
                android:text="@string/keypad_3"/>
        </TableRow>

        <TableRow>
            <View
                style="@style/KeypadDivider"
                android:layout_span="3">
            </View>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/keypad_4"
                style="@style/DialNumberTextView"
                android:text="@string/keypad_4"/>
            <TextView
                android:id="@+id/keypad_5"
                style="@style/DialNumberTextView"
                android:text="@string/keypad_5"/>
            <TextView
                android:id="@+id/keypad_6"
                style="@style/DialNumberTextView"
                android:text="@string/keypad_6"/>
        </TableRow>

        <TableRow>
            <View
                style="@style/KeypadDivider"
                android:layout_span="3">

            </View>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/keypad_7"
                style="@style/DialNumberTextView"
                android:text="@string/keypad_7"/>
            <TextView
                android:id="@+id/keypad_8"
                style="@style/DialNumberTextView"
                android:text="@string/keypad_8"/>
            <TextView
                android:id="@+id/keypad_9"
                style="@style/DialNumberTextView"
                android:text="@string/keypad_9"/>
        </TableRow>

        <TableRow>
            <View
                style="@style/KeypadDivider"
                android:layout_span="3">
            </View>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/keypad_asterisk"
                style="@style/DialNumberTextView"
                android:text="@string/keypad_asterisk"/>
            <TextView
                android:id="@+id/keypad_0"
                style="@style/DialNumberTextView"
                android:text="@string/keypad_0"/>
            <TextView
                android:id="@+id/keypad_number_sign"
                style="@style/DialNumberTextView"
                android:text="@string/keypad_number_sign"/>
        </TableRow>

    </TableLayout>

    <!-- 拨号右侧布局 -->
    <RelativeLayout
        android:id="@+id/dial_right_layout"
        android:layout_width="@dimen/dial_right_view_width"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimaryBackground">

        <!-- 输入框 -->
        <EditText
            android:id="@+id/number_input_text"
            android:layout_width="@dimen/input_view_width"
            android:layout_height="120px"
            android:inputType="phone"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/input_text_size"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <!-- 删除输入按钮 -->
        <ImageButton
            android:id="@+id/input_delete_button"
            android:layout_width="@dimen/delete_image_view_width"
            android:layout_height="@dimen/delete_image_view_height"
            android:background="@drawable/input_back"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/number_input_text"
            android:onClick="onClickKeypad"
            android:layout_marginTop="20px"
            android:layout_marginRight="20px" />

        <!-- 拨打按钮 -->
        <Button
            android:layout_width="@dimen/call_button_width"
            android:layout_height="@dimen/call_button_height"
            android:id="@+id/call_button"
            android:gravity="center_horizontal"
            android:background="@drawable/call_button"
            android:layout_marginBottom="30px"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</LinearLayout>