<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="54px"
        android:paddingLeft="72px"
        android:textColor="@color/colorPrimaryTextDark"
        android:text="@string/pair_list"
        android:textSize="22px"
        android:gravity="center_vertical"/>

    <ListView
        android:id="@+id/paird_device_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:dividerHeight="1px"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120px"
        android:orientation="horizontal"
        android:gravity="center">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_add_more"
                android:layout_width="192px"
                android:layout_height="56px"
                android:background="@drawable/btn_ok_bg"
                android:textColor="@color/colorTabTextSelect"
                android:textSize="26px"
                android:text="@string/add_device"/>
            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="192px"
                android:layout_height="56px"
                android:background="@drawable/btn_cancel_bg"
                android:textColor="@color/set_info_edit_text"
                android:textSize="26px"
                android:text="@string/btn_cancel"
                android:visibility="gone"/>
        </FrameLayout>

        <Button
            android:id="@+id/btn_del_device"
            android:layout_width="192px"
            android:layout_height="56px"
            android:layout_marginLeft="90px"
            android:background="@drawable/btn_del_bg"
            android:padding="0px"
            android:textColor="@color/bt_list_del_color"
            android:textSize="26px"
            android:text="@string/del_device"/>
    </LinearLayout>

</LinearLayout>